# mads_chat

./: .gitignore  CMakeLists.txt  README.md  RELEASE_INSTALL.md  TASKS.md  director.toml  mads.ini  mads_multitool_settings.json  mads_package.json
.github/workflows/: ci.yml  release.yml
src/: main.cpp
